firewall.conf
# Generated by iptables-save v1.4.21 on Mon Nov  4 8:28:32 2021
*nat
:PREROUTING ACCEPT [302:36471]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [24:1716]
:POSTROUTING ACCEPT [25:1368]
-A POSTROUTING -s 192.168.20.3/32 -j MASQUERADE
COMMIT
# Completed on Mon Nov  4 12:28:32 2021
# Generated by iptables-save v1.4.21 on Mon Nov  8 8:28:32 2021
*filter
:INPUT DROP [40:4718]
:FORWARD DROP [92:6384]
:OUTPUT DROP [21:1497]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.2/32 -i eth2 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -i eth2 -o eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Nov 4 8:28:32 2021
